chore(preview): merge the v0.11 review sweep up, keeping this line's mechanism (#327)
* feat(security): make the ClaimsMapper seam reachable, and add the ADR-063 stub (#308)

* docs(adr): add the ADR-063 link stub the index has been announcing

The cross-repo stub table in the global index has carried "(stub pending —
exeris-kernel/docs/adr/ADR-063.link.md to be added)" for some time and the file
did not exist. Reported from the exeris-spring-runtime side; verified from the
ref rather than a checkout, and the target ADR confirmed present in the public
exeris-spring-runtime repo before linking it.

Doing it now rather than at the cut, for the same reason the release notes went
in early: it keeps the release PR mechanical.

The stub is written for a kernel reader rather than transcribed from the index
row, because two of ADR-063's three constraints are statements about THIS
repository — that hasRole is absent from the edge DSL (RouteRequirement has no
role kind and RouteAuthorizationEnforcer decides only via hasScope), and that
the unmatched route takes no default (HttpRoutePolicy.unmatched is fail-closed
and exempts none of the driver's own probe routes).

ONE CLAIM IS CORRECTED RATHER THAN COPIED. The index row says
CommunityOidcIdentityProvider "hardcodes new CommunityClaimsMapper()". Checked
against the tree, the seam exists: a constructor taking a ClaimsMapper (:72) and
a static factory accepting one (:114). What is missing is the path to it —
CommunitySecurityProvider builds the provider through overloads (:60, :75) that
pass no mapper, so the default is the only one a booted kernel can reach.

The consequence ADR-063 records is unchanged, but the corrective action is not:
thread the existing parameter through CommunitySecurityProvider and the
bootstrap path, rather than add a seam that is already there. That distinction
is the reason a stub is worth more than a pointer.

Docs only; the single relative link resolves.

Co-Authored-By: Claude Opus 5 <noreply@anthr